--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -31,4 +31,4 @@ jobs:
 
       - name: Run PyTest
         run: |
-          python -m pytest --cov=src --cov-fail-under=80 test/
+          python -m pytest --cov-config=.coveragerc
