--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - docs # Change this to the branch where your documentation resides
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   # Single deploy job since we're just deploying
@@ -22,6 +29,20 @@ jobs:
           python-version: "3.x"
 
       - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements_dist.txt
+
+      - name: Build package
+        run: |
+          python setup.py sdist bdist_wheel
+
+      - name: Local pip install
+        run: |
+          pip install .
+
+      - name: Install dependencies 2
         run: |
           pip install sphinx sphinx-rtd-theme  # Add any other dependencies needed
 
